adding useless line for testing purpose

--- a/clicker.html
+++ b/clicker.html
@@ -59,5 +59,6 @@ function spawnImageAtRandomPlace() {
         <p id="tablo">0</p>
         <br>
         <button onclick="spawnImageAtRandomPlace(); timer();">Start game</button>
+        asdasd
     </body>
 </html>
