added very inportant line

--- a/clicker.html
+++ b/clicker.html
@@ -59,6 +59,7 @@ function spawnImageAtRandomPlace() {
         <p id="tablo">0</p>
         <br>
         <button onclick="spawnImageAtRandomPlace(); timer();">Start game</button>
+		<br> Yura gay
 
     </body>
 </html>
